--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Bolnify",
-  "version": "1.0.5",
+  "version": "1.1.5",
   "manifest_version": 2,
-  "description": "Bolnify is a Google Chrome extension that sends users a desktop notification as soon as they have sold something through Bol.com LVB",
+  "description": "Bolnify is een Google Chrome-extensie die gebruikers een melding stuurt zodra ze iets hebben verkocht via Bol.com LVB.",
   "homepage_url": "https://bol.com",
   "icons": {
     "16": "assets/icons/icon16.png",
