--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Bolnify",
-  "version": "1.1.8",
+  "version": "1.2.0",
   "manifest_version": 2,
-  "description": "Bolnify is een Google Chrome-extensie die gebruikers een melding stuurt zodra ze iets hebben verkocht via Bol.com LVB.",
+  "description": "Bolnify is een Google Chrome-extensie die gebruikers een melding stuurt zodra ze een product hebben verkocht via Bol.com LVB.",
   "homepage_url": "https://www.facebook.com/Bolnify/",
   "icons": {
     "16": "assets/icons/icon16.png",
